Update 'g6xkkfxt1-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:3e34cca6a781a6821313a95c92e2034bed431524@sha256:474313f8be316d54bacc4554f240ae8c90bebf878bb6f25075779d1a12ade926

--- a/components/g6xkkfxt1-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/g6xkkfxt1-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: g6xkkfxt1-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:3e34cca6a781a6821313a95c92e2034bed431524@sha256:474313f8be316d54bacc4554f240ae8c90bebf878bb6f25075779d1a12ade926
+          name: container-image
